Dark Mode fixes

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -149,7 +149,7 @@ button:disabled{
 }
 
 .diet-icon {
-	height: 20px;
+	height: 23px;
 }
 
 .profile-icon {
